fixed passenger count not being visible

--- a/src/scss/_flight-form.scss
+++ b/src/scss/_flight-form.scss
@@ -164,8 +164,8 @@
         }
 
         input {       
-            border-radius: 0 10px 10px 0;
-            margin-left: 2rem;
+            border-radius: 0 20px 10px 0;
+            margin-left: 11%;
         }
 
         &::before {
