--- a/src/scss/_passenger-form.scss
+++ b/src/scss/_passenger-form.scss
@@ -37,9 +37,9 @@
 
         &__passenger-count {
             @include font($primary-font, 1.2rem, 300, $primary-button);
-            padding-left: clamp(1px, 13px, 13px);
+            // padding-left: clamp(1px, 3px, 3px);
             text-align: center;
-            width: clamp(1.3rem, 1.75rem, 1.75rem);
+            width: clamp(1rem, 2rem, 2rem);
             border: none;
 
             &:focus {
