--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -1,9 +1,12 @@
 @media screen and (max-width: 768px) {
 
-    img {
-        object-fit: cover;
-        max-width: 100vw;
-        height: 75vh;
+    .img-slideshow {
+        max-height: fit-content;
+
+        img {
+            top: 0%;
+            left: -50%;
+        }
     }
 
     .form-container {
